syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/bbsemih/gobank/pb";

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    string AccessToken = 1;
    User user = 2;
    google.protobuf.Timestamp AccessTokenExpiresAt = 3;
}